add readme & license & update html

--- a/server/index.html
+++ b/server/index.html
@@ -52,7 +52,8 @@
 			<input type="submit" value="轉換" />
 		</form>
 		<div class="block">
-			請注意，所有的檔案編碼都會轉換為 UTF-8，無論原本的檔案是 BIG-5, GBK 或是其他的都沒差
+			<div>請注意，所有的檔案編碼都會轉換為 UTF-8，無論原本的檔案是 BIG-5, GBK 或是其他的都沒差</div>
+			<div><a href="https://github.com/maple3142/ebook-converter">GitHub</a></div>
 		</div>
 		<style>
 			body {
