change options' text

--- a/server/index.html
+++ b/server/index.html
@@ -18,13 +18,13 @@
 					<option value="hongKongToSimplified">香港繁體轉簡體</option>
 					<option value="simplifiedToHongKong">簡體轉香港繁體</option>
 					<option value="simplifiedToTraditional">簡體轉繁體</option>
-					<option value="simplifiedToTaiwan" selected>簡體轉台灣正體</option>
-					<option value="simplifiedToTaiwanWithPhrases">簡體轉台灣正體(含單字)</option>
+					<option value="simplifiedToTaiwan" selected>簡體轉台灣繁體</option>
+					<option value="simplifiedToTaiwanWithPhrases">簡體轉台灣繁體(含單字)</option>
 					<option value="traditionalToHongKong">繁體轉香港繁體</option>
 					<option value="traditionalToSimplified">繁體轉簡體</option>
-					<option value="traditionalToTaiwan">繁體轉台灣正體</option>
-					<option value="taiwanToSimplified">台灣正體轉簡體</option>
-					<option value="taiwanToSimplifiedWithPhrases">台灣正體轉簡體(含單字)</option>
+					<option value="traditionalToTaiwan">繁體轉台灣繁體</option>
+					<option value="taiwanToSimplified">台灣繁體轉簡體</option>
+					<option value="taiwanToSimplifiedWithPhrases">台灣繁體轉簡體(含單字)</option>
 				</select>
 			</div>
 			<input type="submit" value="轉換" />
@@ -40,13 +40,13 @@
 					<option value="hongKongToSimplified">香港繁體轉簡體</option>
 					<option value="simplifiedToHongKong">簡體轉香港繁體</option>
 					<option value="simplifiedToTraditional">簡體轉繁體</option>
-					<option value="simplifiedToTaiwan" selected>簡體轉台灣正體</option>
-					<option value="simplifiedToTaiwanWithPhrases">簡體轉台灣正體(含單字)</option>
+					<option value="simplifiedToTaiwan" selected>簡體轉台灣繁體</option>
+					<option value="simplifiedToTaiwanWithPhrases">簡體轉台灣繁體(含單字)</option>
 					<option value="traditionalToHongKong">繁體轉香港繁體</option>
 					<option value="traditionalToSimplified">繁體轉簡體</option>
-					<option value="traditionalToTaiwan">繁體轉台灣正體</option>
-					<option value="taiwanToSimplified">台灣正體轉簡體</option>
-					<option value="taiwanToSimplifiedWithPhrases">台灣正體轉簡體(含單字)</option>
+					<option value="traditionalToTaiwan">繁體轉台灣繁體</option>
+					<option value="taiwanToSimplified">台灣繁體轉簡體</option>
+					<option value="taiwanToSimplifiedWithPhrases">台灣繁體轉簡體(含單字)</option>
 				</select>
 			</div>
 			<input type="submit" value="轉換" />
