--- a/server/index.html
+++ b/server/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="/static/style.css" />
 		<title>Epub/Txt 繁簡轉換</title>
 	</head>
 	<body>
@@ -55,7 +56,6 @@
 			<div>請注意，所有的檔案編碼都會轉換為 UTF-8，無論原本的檔案是 BIG-5, GBK 或是其他的都沒差</div>
 			<div><a href="https://github.com/maple3142/ebook-converter">GitHub</a></div>
 		</div>
-		<link rel="stylesheet" href="/static/style.css">
 		<script src="/static/script.js"></script>
 	</body>
 </html>
