--- a/server/index.html
+++ b/server/index.html
@@ -8,14 +8,14 @@
 		<title>Epub/Txt 繁簡轉換</title>
 	</head>
 	<body>
-		<form action="/convert-epub" method="POST" enctype="multipart/form-data" class="block file-form">
+		<form action="/opencc-convert-epub" method="POST" enctype="multipart/form-data" class="block file-form">
 			<div>
-				<label for="epub">Epub 檔案:</label>
-				<input type="file" id="epub" name="epub" accept="application/epub+zip" />
+				<label for="opencc-epub">Epub 檔案(OpenCC):</label>
+				<input type="file" id="opencc-epub" name="epub" accept="application/epub+zip" />
 			</div>
 			<div>
-				<label for="type">轉換模式:</label>
-				<select id="type-epub" name="type">
+				<label for="select-opencc-epub">轉換模式:</label>
+				<select id="select-opencc-epub" name="type">
 					<option value="hongKongToSimplified">香港繁體轉簡體</option>
 					<option value="simplifiedToHongKong">簡體轉香港繁體</option>
 					<option value="simplifiedToTraditional">簡體轉繁體</option>
@@ -30,14 +30,33 @@
 			</div>
 			<input type="submit" value="轉換" />
 		</form>
-		<form action="/convert-txt" method="POST" enctype="multipart/form-data" class="block file-form">
+		<form action="/zhc-convert-epub" method="POST" enctype="multipart/form-data" class="block file-form">
 			<div>
-				<label for="txt">Txt 檔案:</label>
-				<input type="file" id="txt" name="txt" accept="text/plain" />
+				<label for="zhc-epub">Epub 檔案(繁化姬):</label>
+				<input type="file" id="zhc-epub" name="epub" accept="application/epub+zip" />
 			</div>
 			<div>
-				<label for="type">轉換模式:</label>
-				<select id="type-txt" name="type">
+				<label for="select-zhc-epub">轉換模式:</label>
+				<select id="select-zhc-epub" name="type">
+					<option value="Simplified">簡體化</option>
+					<option value="Traditional">繁體化</option>
+					<option value="China">中國化</option>
+					<option value="Hongkong">香港化</option>
+					<option value="Taiwan" selected>台灣化</option>
+					<option value="WikiSimplified">維基簡體化</option>
+					<option value="WikiTraditional">維基繁體化</option>
+				</select>
+			</div>
+			<input type="submit" value="轉換" />
+		</form>
+		<form action="/opencc-convert-txt" method="POST" enctype="multipart/form-data" class="block file-form">
+			<div>
+				<label for="opencc-txt">Txt 檔案(OpenCC):</label>
+				<input type="file" id="opencc-txt" name="txt" accept="text/plain" />
+			</div>
+			<div>
+				<label for="select-opencc-txt">轉換模式:</label>
+				<select id="select-opencc-txt" name="type">
 					<option value="hongKongToSimplified">香港繁體轉簡體</option>
 					<option value="simplifiedToHongKong">簡體轉香港繁體</option>
 					<option value="simplifiedToTraditional">簡體轉繁體</option>
@@ -48,6 +67,25 @@
 					<option value="traditionalToTaiwan">繁體轉台灣繁體</option>
 					<option value="taiwanToSimplified">台灣繁體轉簡體</option>
 					<option value="taiwanToSimplifiedWithPhrases">台灣繁體轉簡體(含單字)</option>
+				</select>
+			</div>
+			<input type="submit" value="轉換" />
+		</form>
+		<form action="/zhc-convert-txt" method="POST" enctype="multipart/form-data" class="block file-form">
+			<div>
+				<label for="zhc-txt">Txt 檔案(繁化姬):</label>
+				<input type="file" id="zhc-txt" name="txt" accept="text/plain" />
+			</div>
+			<div>
+				<label for="select-zhc-txt">轉換模式:</label>
+				<select id="select-zhc-txt" name="type">
+					<option value="Simplified">簡體化</option>
+					<option value="Traditional">繁體化</option>
+					<option value="China">中國化</option>
+					<option value="Hongkong">香港化</option>
+					<option value="Taiwan" selected>台灣化</option>
+					<option value="WikiSimplified">維基簡體化</option>
+					<option value="WikiTraditional">維基繁體化</option>
 				</select>
 			</div>
 			<input type="submit" value="轉換" />
@@ -55,6 +93,9 @@
 		<div class="block">
 			<div>請注意，所有的檔案編碼都會轉換為 UTF-8，無論原本的檔案是 BIG-5, GBK 或是其他的都沒差</div>
 			<div><a href="https://github.com/maple3142/ebook-converter">GitHub</a></div>
+		</div>
+		<div class="block">
+			<div>另外，關於<a href="https://zhconvert.org/">繁化姬</a>的轉換部分是在後台調用此網站所提供的 <a href="https://docs.zhconvert.org/api/getting-started/">API</a>(商業使用要付費) 的，速度就我自己測試是比 <a href="https://github.com/BYVoid/OpenCC">OpenCC</a> 轉換還要慢，而品質就由自己體會了</div>
 		</div>
 		<script src="/static/script.js"></script>
 	</body>
